# pdf_form_read

./: .gitignore  README.md  pyproject.toml  validate_form.ipynb
src/pdf_form_read/: __init__.py
