# SPDX-FileCopyrightText: 2026 Evandro Chagas Ribeiro da Rosa <evandro.rosa.BE@eldorado.org.br>
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "pdf_form_read"
version = "1.0.0"
description = "Read PDF AcroForm"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSES/MIT.txt" }
authors = [{ name = "Evandro Rosa", email = "evandro.rosa.BE@eldorado.org.br" }]
dependencies = ["pypdf", "pandas"]


[project.scripts]
pdf_form_read = "pdf_form_read:main"
